# indexeddb_from_rust

./: .auto_version_from_date.json  Cargo.toml  Makefile.toml  README.md  lmakeversionfromdate.json  package-lock.json  tsconfig.json
automation_tasks_rs/src/: main.rs
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/implementors/strum/: trait.AsStaticRef.js
docs/indexeddb_from_rust/: all.html  fn.__wasm_bindgen_generated_wasm_bindgen_start.html  fn.wasm_bindgen_start.html  index.html  macro.on_click.html  macro.row_on_click.html  sidebar-items.js
docs/indexeddb_from_rust/currdb_config_mod/: fn.currdb.html  fn.get_base_currency.html  fn.get_date_fetch.html  fn.get_input_number.html  fn.get_quote_currency.html  fn.get_rate.html  fn.set_base_currency.html  fn.set_date_fetch.html  fn.set_input_number.html  fn.set_quote_currency.html  fn.set_rate.html  index.html  sidebar-items.js
docs/indexeddb_from_rust/currdb_currency_mod/: fn.fill_currency_store.html  fn.from_jsvalue.html  fn.get_rate.html  fn.put_inside_database.html  fn.put_inside_object_store.html  fn.put_inside_transaction.html  fn.to_jsvalue.html  index.html  sidebar-items.js  struct.ValueStruct.html
docs/indexeddb_from_rust/currdb_mod/: enum.Databases.html  enum.ObjectStores.html  fn.init_upgrade_currdb.html  fn.upgrade_currdb.html  fn.upgrade_from_v00_to_v01.html  fn.upgrade_from_v01_to_v02.html  index.html  sidebar-items.js
docs/indexeddb_from_rust/idbr_imports_mod/: fn.add_key_value.html  fn.check_browser_capability.html  fn.create_object_store.html  fn.cursor.html  fn.cursor_continue.html  fn.cursor_key.html  fn.cursor_value.html  fn.db_get_jsvalue.html  fn.db_put_key_value.html  fn.get_key_value.html  fn.get_object_store_from_transaction_readwrite.html  fn.get_object_store_from_transaction_versionchange.html  fn.init_upgrade_db.html  fn.put_key_value.html  fn.transaction_close.html  fn.transaction_object_store_put.html  fn.use_db.html  (+4 more)
sample_data/: eur.json  obsolete_qvs20.txt
src/: config_mod.rs  currdb_config_mod.rs  currdb_currency_mod.rs  currdb_mod.rs  currency_mod.rs  idb_currdb_mod.rs  idb_exports.ts  idb_imports_mod.rs  idb_mod.rs  idbjs_mod.rs  idbr_imports_mod.rs  idbr_mod.rs  indexeddb_lib.ts  lib.rs  main_page_mod.rs  page_input_currency_mod.rs  page_main_mod.rs  page_modal_about_mod.rs  page_output_currency_mod.rs  page_units_mod.rs  qvs20_currency_mod.rs  utils_mod.rs  web_sys_mod.rs
web_server_folder/indexeddb_from_rust/: index.html  manifest.json  service_worker.js  start_service_worker.js
(+91 files in other folders)
