[package]
name = "indexeddb_from_rust"
version = "2021.418.1035"
authors = ["bestia.dev"]
edition = "2018"
description = "experimenting with indexeddb in rust wasm PWA"
repository = "https://github.com/bestia-dev/indexeddb_from_rust"
readme = "README.md"
license = "MIT"
keywords = ["wasm"]
categories = ["learning"]
publish = false

[lib]
# cdylib is for the wasm module library
crate-type = ["cdylib"]

[dependencies]
unwrap = "1.2.1"
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.6"
js-sys = "0.3.46"
wasm-bindgen-futures = "0.4.20"
serde_json = "1.0"
serde-wasm-bindgen = "0.1.3"
strum = "0.11.0"
strum_macros = "0.11.0"
serde = {version = "1.0", features = ["derive"]}

[dependencies.web-sys]
version = "0.3.46"
features = [
  "AbortController",
  "console",
  "Document",
  "Element",
  "ErrorEvent",
  "Headers",
  "HtmlAudioElement",
  "HtmlCollection",
  "HtmlElement",
  "HtmlHtmlElement",
  "IdbFactory",
  "IdbOpenDbRequest",
  "IdbRequest",
  "KeyboardEvent",
  "Location",
  "MouseEvent",
  "Navigator",
  "Node",
  "Request",
  "RequestInit",
  "Response",
  "Screen",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.19"

[profile.release]
panic = "abort"
